--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
+  "name": "wallet-api",
+  "version": "0.0.1",
+  "private": true,
   "dependencies": {
-    "@react-native-community/hooks": "^2.8.1",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.18.0"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "latest",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "latest",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^5.0.0"
   },
-  "name": "marnie",
-  "version": "1.0.0",
-  "main": "index.js",
-  "devDependencies": {},
+  "engines": {
+    "node": "14.17.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "prettier:fix": "prettier './**/*.js' --write"
+  }
 }
