worked on the otp functionality

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_PASSWORD = 'cadWallet@22'
 DB_NAME = 'wallet'
 
 APP_PORT=9900
+TWILIO_ACCOUNT_SID="ACdfdeb8cbc7d912f6e9527f23a42b2dd1"
+TWILIO_AUTH_TOKEN="8046e82d47f9473a4d85ed1d9b4aea25"
