--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5",
     "prettier": "^1.19.1",
     "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^5.0.0"
+    "prettier-eslint-cli": "^5.0.0",
+    "sequelize": "^6.6.5",
+    "twilio": "^3.77.0"
   },
   "engines": {
     "node": "14.17.1"
@@ -25,5 +26,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "prettier:fix": "prettier './**/*.js' --write"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
