--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-DB_HOST= '13.58.173.35'
+DB_HOST = '13.58.173.35'
 DB_USERNAME = 'root'
 DB_PASSWORD = 'cadWallet@22'
 DB_NAME = 'wallet'
 
-APP_PORT=9900
-TWILIO_ACCOUNT_SID="ACdfdeb8cbc7d912f6e9527f23a42b2dd1"
-TWILIO_AUTH_TOKEN="8046e82d47f9473a4d85ed1d9b4aea25"
+APP_PORT = 9900
+
+TWILIO_ACCOUNT_SID = 'ACdfdeb8cbc7d912f6e9527f23a42b2dd1'
+TWILIO_AUTH_TOKEN = '8046e82d47f9473a4d85ed1d9b4aea25'
